<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <!--Titulo-->
        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/alto1"
            android:layout_marginEnd="@dimen/alto1"
            android:text="@string/strConvertidor"
            android:textSize="@dimen/tamtexto3"
            android:gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margen1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--Medida Origen-->
        <TextView
            android:id="@+id/tvMeidaOrigen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margen3"
            android:text="@string/strOrigin"
            android:textSize="@dimen/tamtexto2"
            android:textAlignment="textStart"
            android:layout_marginStart="@dimen/margen2"
            android:layout_marginTop="@dimen/margen1"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

        <RadioGroup
            android:id="@+id/rbgMedidaOrigen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margen2"
            android:layout_marginTop="@dimen/margen1"
            app:layout_constraintStart_toStartOf="@+id/tvMeidaOrigen"
            app:layout_constraintTop_toBottomOf="@+id/tvMeidaOrigen"
            >

            <RadioButton
                android:id="@+id/rbOrigen1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strKM"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/rbOrigen2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strM"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/rbOrigen3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strCM"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </RadioGroup>

        <!--Medida Destino-->
        <TextView
            android:id="@+id/tvMeidaDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margen3"
            android:text="@string/strDestiny"
            android:textSize="@dimen/tamtexto2"
            android:textAlignment="textStart"
            android:layout_marginStart="@dimen/margen2"
            android:layout_marginTop="@dimen/margen1"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbgMedidaOrigen" />

        <RadioGroup
            android:id="@+id/rbgMedidaDestino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margen2"
            android:layout_marginTop="@dimen/margen1"
            app:layout_constraintStart_toStartOf="@+id/tvMeidaDestino"
            app:layout_constraintTop_toBottomOf="@+id/tvMeidaDestino"
            >

            <RadioButton
                android:id="@+id/rbDestino1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strKM" />

            <RadioButton
                android:id="@+id/rbDestino2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strM" />

            <RadioButton
                android:id="@+id/rbDestino3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strCM" />
        </RadioGroup>

        <!--Convertir-->
        <TextView
            android:id="@+id/tvConvertir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen1"
            android:layout_marginStart="@dimen/margen1"
            android:layout_marginEnd="@dimen/margen3"
            android:text="@string/strConvert"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/tamtexto2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbgMedidaDestino" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="@dimen/tamContainer"
            android:layout_height="@dimen/alto3"
            android:textSize="@dimen/tamtexto1"
            android:hint="@string/strDigit"
            android:autofillHints="@string/strDigit"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/tvConvertir"
            app:layout_constraintStart_toStartOf="@+id/tvConvertir"
             />

        <Button
            android:id="@+id/btnConvertir"
            android:layout_width="@dimen/tamContainer"
            android:layout_height="@dimen/alto3"
            android:layout_marginTop="@dimen/margen1"
            android:gravity="center"
            android:text="@string/strBtnConvert"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />

        <!--Result-->
        <TextView
            android:id="@+id/tvResult"
            android:layout_width="@dimen/tamContainer"
            android:layout_height="@dimen/alto3"
            android:layout_marginTop="@dimen/margen2"
            android:background="@color/design_default_color_secondary"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/tamtexto2"
            app:layout_constraintStart_toStartOf="@+id/btnConvertir"
            app:layout_constraintTop_toBottomOf="@+id/btnConvertir" />

        <!--Texto vacio-->
        <TextView
            android:id="@+id/textView5"
            android:layout_width="10dp"
            android:layout_height="@dimen/margen2"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvResult"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>